# asplib

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
include/liblp/: atom.h  io.h
liblp/: .gitignore  Makefile  atom.c  atom.h  input.c  io.h  output.c  rule.h  symbol.c  symbol.h  version.h
liblp/.libs/: .gitignore
src/: input.c  rule.c  version.c
src/utils/: lplist.c  lpstrip.c
utils/: .gitignore  Makefile  len.c  lplist.c  lpstrip.c
